# python-test-aviz

./: .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/workflows/: aaa.yml  automation.yml  jira_testing.yml  lint.yml  pack.yml  publish_to_pypi.yml  pytest_by_marker.yml
code_quality_config/: .pylintrc
files/: test_file.txt
python_test_aviz/: aviz_test.py  custom_python_logger_test.py  notion_test.py  python_jira_plus_test.py  python_pandas_translation_test.py  python_simple_email_sender_test.py  run_jira_check.sh  run_pytest_marker.sh
python_test_aviz/tests/: conftest.py  pytest.ini  test_dummy.py
